week6/manifests/ingress-clippy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clippy-ing
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: party-clippy.01645db0343d4b6b9675.southcentralus.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clippy-svc
                port:
                  number: 80
