week6/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ing
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    certmanager.k8s.io/cluster-issuer: app-tls
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - dotnetappsample444.southcentralus.cloudapp.azure.com
      secretName: app-tls
  rules:
    - host: dotnetappsample444.southcentralus.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnetapp-svc
                port:
                  number: 80
